<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_live"
        android:icon="@drawable/ic_live_tv"
        android:title="@string/tab_live" />
    <item
        android:id="@+id/nav_vod"
        android:icon="@drawable/ic_movie"
        android:title="@string/tab_vod" />
    <item
        android:id="@+id/nav_series"
        android:icon="@drawable/ic_series"
        android:title="@string/tab_series" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite_filled"
        android:title="@string/tab_favorites" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/tab_search" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />
</menu>
